<resources>
    <string name="app_name">Bill Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="paid">Paid</string>
    <string name="upcoming">Upcoming</string>
    <string name="summary">Summary</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="due_date">Due Date</string>
    <string name="frequency">Frequency</string>
    <string name="button">Button</string>
    <string name="delete">Delete</string>
    <string name="bills_summary">Bills Summary</string>
    <string name="sign_up_page">Sign up Page</string>
    <string name="register">Register</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="lastname">LastName</string>
    <string name="login">Login</string>
    <string name="welcome_to_our_bill_tracking_app_please_register_by_creating_an_account">Welcome to our bill tracking app, please register by creating an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_page">Login Page</string>
    <string name="billid">BillId</string>
    <string name="userid">UserId</string>
    <string name="annual">ANNUAL</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="quarterly">QUARTERLY</string>
    <string name="upcoming_bills">Upcoming Bills</string>
    <string-array name="frequencies">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Annual</item>
    </string-array>
</resources>